--- a/index2.html
+++ b/index2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
     <title>Introduction to CSS Lab</title>
-    <link rel="stylesheet" href="style.css">
+    <link ref="stylesheet"  href="style2.css">
   </head>
 
   <body>
